@@ -9,15 +9,9 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
-import javafx.beans.property.IntegerProperty;
 import javafx.beans.property.SimpleIntegerProperty;
-import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
-import javafx.scene.Scene;
-import javafx.scene.control.Label;
-import javafx.stage.Stage;
-import org.java_websocket.drafts.Draft_6455;
-import org.java_websocket.handshake.ServerHandshake;
+import javafx.scene.control.Alert;
 import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -25,190 +19,140 @@ import org.slf4j.LoggerFactory;
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
+import java.net.URLEncoder;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
+import java.sql.SQLException;
 import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.Future;
 
-import static java.time.format.DateTimeFormatter.ISO_INSTANT;
-import static org.investpro.Coinbase.CoinbaseCandleDataSupplier.OBJECT_MAPPER;
+import static org.investpro.BinanceUSClient.binanceUsRequest;
 
 public class BinanceUs extends Exchange {
-
+    private static final Logger logger = LoggerFactory.getLogger(BinanceUs.class);
+    private static final String API_URL = "https://api.binance.us";
+    private static final String HMAC_SHA256 = "HmacSHA256";
     static HttpClient client = HttpClient.newHttpClient();
     static HttpRequest.Builder requestBuilder = HttpRequest.newBuilder();
+    HashMap<String, String> data0 = new HashMap<>();
+    private String apiKey;
+    private String apiSecret;
 
-    private static final Logger logger = LoggerFactory.getLogger(BinanceUs.class);
-    static String url = "https://api.binance.us";
-    //  Market Data Endpoint: wss://advanced-trade-ws.coinbase.com
-    //  User Order Data Endpoint: wss://advanced-trade-ws-user.coinbase.com
-    private String message;
-
-    protected BinanceUs(String apiKey, String apiSecret) throws UnsupportedEncodingException, NoSuchAlgorithmException, InvalidKeyException {
-        super(
-                apiKey,
-                apiSecret
-
-                //  Arrays.asList("BTC-USD", "ETH-USD", "LTC-USD", "BCH-USD", "BSV-USD", "SOL-USD", "XRP-USD", "BTC-GBP", "ETH-GBP", "LTC-GBP", "BCH-GBP", "BSV-GBP", "SOL-GBP", "XRP-GBP", "BTC-EUR", "ETH-EUR", "LTC-EUR", "BCH-EUR", "BSV-EUR", "SOL-EUR", "XRP-EUR")
-        );
-
+    public BinanceUs(String apiKey, String apiSecret) throws NoSuchAlgorithmException, InvalidKeyException {
+        super(apiKey, apiSecret);
         this.message = "BinanceUs";
-        requestBuilder.header("Accept", "application/json");
-        requestBuilder.header("Content-Type", "application/json");
-
-        // Generate signature using API key and secret
-
 
         // Set headers for the request
+        requestBuilder.header("Accept", "application/json");
+        requestBuilder.header("Content-Type", "application/json");
         requestBuilder.header("X-MBX-APIKEY", apiKey);
-
-        long timestamp = System.currentTimeMillis();
-        String signature= signer(apiSecret,"", String.valueOf(timestamp));
-        requestBuilder.header("CB-ACCESS-SIGN", signature);
-
-        requestBuilder.header("TIMESTAMP", String.valueOf(timestamp));
-
-
+        // Generate signature using API key and secret
+        requestBuilder.header(
+                "signature", signer(apiSecret, data0));
+        this.apiKey = apiKey;
+        this.apiSecret = apiSecret;
 
     }
-    // Updated signature generation method
-    private @NotNull String signer(String apiSecret, String requestPath, String timestamp)
-            throws NoSuchAlgorithmException, InvalidKeyException {
 
-        String rehash = "%sGET%s%s".formatted(timestamp, requestPath, "");
-        return hmacSHA256(apiSecret, rehash);
+    private static String urlEncode(String value) {
+        return URLEncoder.encode(value, StandardCharsets.UTF_8);
     }
 
-    private @NotNull String hmacSHA256(@NotNull String apiSecret, @NotNull String message)
-            throws NoSuchAlgorithmException, InvalidKeyException {
-        Mac hmacSHA256 = Mac.getInstance("HmacSHA256");
-        hmacSHA256.init(new SecretKeySpec(apiSecret.getBytes(StandardCharsets.UTF_8), "HmacSHA256"));
-        byte[] rawHmac = hmacSHA256.doFinal(message.getBytes(StandardCharsets.UTF_8));
-        StringBuilder hexString = new StringBuilder();
-        for (byte b : rawHmac) {
-            String hex = String.format("%02x", b);
-            hexString.append(hex);
+    private static @NotNull String bytesToHex(byte @NotNull [] bytes) {
+        StringBuilder sb = new StringBuilder();
+        for (byte b : bytes) {
+            sb.append(String.format("%02x", b));
         }
-        return hexString.toString();
+        return sb.toString();
     }
+
+    public String getApiKey() {
+        return apiKey;
+    }
+
+    public void setApiKey(String apiKey) {
+        this.apiKey = apiKey;
+    }
+    private String message;
+
+    public String getApiSecret() {
+        return apiSecret;
+    }
+
+    public void setApiSecret(String apiSecret) {
+        this.apiSecret = apiSecret;
+    }
+
+    public String getMessage() {
+        return message;
+    }
+
+    public void setMessage(String message) {
+        this.message = message;
+    }
+
+    private @NotNull String signer(@NotNull String apiSecret, @NotNull Map<String, String> data)
+            throws NoSuchAlgorithmException, InvalidKeyException {
+
+        Mac hmacSHA256 = Mac.getInstance(HMAC_SHA256);
+        SecretKeySpec secretKeySpec = new SecretKeySpec(apiSecret.getBytes(StandardCharsets.UTF_8), HMAC_SHA256);
+        hmacSHA256.init(secretKeySpec);
+        data.put("timestamp", String.valueOf(System.currentTimeMillis() / 1000));
+
+        byte[] hmacData = hmacSHA256.doFinal(data.getOrDefault(
+                "timestamp", String.valueOf(System.currentTimeMillis() / 1000)
+        ).getBytes(StandardCharsets.UTF_8));
+        return bytesToHex(hmacData);
+    }
+
+    // Make Binance US request with signature (GET request)
+//
 
     @Override
-    public Account getAccounts() throws IOException, InterruptedException {
+    public CompletableFuture<Account> getAccounts() {
+        Map<String, String> data = Map.of("timestamp", String.valueOf(System.currentTimeMillis()));
+        client.sendAsync(requestBuilder.uri(URI.create("%s/api/v3/account".formatted(API_URL))).build(), HttpResponse.BodyHandlers.ofString())
 
-        // Here you should implement the logic to fetch account details from Coinbase API
-        requestBuilder.uri(URI.create("%s/accounts".formatted(url)));
-        requestBuilder.GET();
+                .thenApply(response -> {
 
-        HttpResponse<String> response = client.send(requestBuilder.build(), HttpResponse.BodyHandlers.ofString());
-        if (response.statusCode() == 200) {
-            ObjectMapper objectMapper = new ObjectMapper();
-            objectMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
-            objectMapper.registerModule(new JavaTimeModule());
-            return objectMapper.readValue(response.body(), Account.class);
-        }
-        throw new RuntimeException("Failed to fetch account details: %s".formatted(response.body()));
+                    if (response.statusCode() != 200) {
+                        throw new RuntimeException("Failed to get account data: status code %d".formatted(response.statusCode()));
+                    }
+                    try {
+                        ObjectMapper objectMapper = new ObjectMapper();
+                        objectMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
+                        objectMapper.registerModule(new JavaTimeModule());
+                        return objectMapper.readValue(response.body(), Account.class);
+                    } catch (IOException e) {
+                        throw new RuntimeException("Failed to parse account data: %s".formatted(e.getMessage()), e);
+                    }
+                }).exceptionallyComposeAsync(
+                        ex -> {
+                            logger.error("Error getting accounts: {}", ex.getMessage());
+                            return
+                                    new CompletableFuture<>();
+                        }
+
+                );
+
+        return new CompletableFuture<>();
+
     }
 
     @Override
     public Boolean isConnected() {
-        // Check if the WebSocket client is connected
-        return this.getWebSocketClient().connectionEstablished.get();
-
+        return webSocketClient.isConnected();
     }
-
-    private ExchangeWebSocketClient getWebSocketClient() {
-
-        this.webSocketClient = new ExchangeWebSocketClient(URI.create("wss://stream.binance.us:9443"), new Draft_6455()) {
-            @Override
-            public CountDownLatch getInitializationLatch() {
-
-
-                return null;
-            }
-
-            @Override
-            public void streamLiveTrades(TradePair tradePair, LiveTradesConsumer liveTradesConsumer) {
-
-                BinanceUs.this.webSocketClient.send(OBJECT_MAPPER.createObjectNode().put("type", "subscribe")
-                        .put("product_id", tradePair.toString('-')).toPrettyString());
-
-            }
-
-            @Override
-            public void stopStreamLiveTrades(TradePair tradePair) {
-                BinanceUs.this.webSocketClient.send(OBJECT_MAPPER.createObjectNode().put("type", "unsubscribe")
-                        .put("product_id", tradePair.toString('-')).toPrettyString());
-
-            }
-
-            @Override
-            public boolean supportsStreamingTrades(TradePair tradePair) {
-
-                return true;
-
-
-            }
-
-            @Override
-            public void onError(Exception exception) {
-
-                logger.info(
-                        "WebSocket connection failed, retrying in 5 seconds. Error: {}",
-                        exception.getMessage()
-
-                );
-            }
-
-            @Override
-            public void onOpen(ServerHandshake handshake) {
-                logger.info("WebSocket connection established");
-                BinanceUs.this.webSocketClient.getInitializationLatch().countDown();
-
-            }
-
-            @Override
-            public void onMessage(String message) {
-                try {
-                    ObjectMapper objectMapper = new ObjectMapper();
-                    objectMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
-                    objectMapper.registerModule(new JavaTimeModule());
-                    Trade liveTrade = objectMapper.readValue(message, Trade.class);
-                    liveTradesConsumer.accept(liveTrade);
-                } catch (JsonProcessingException e) {
-                    logger.error("Failed to parse WebSocket message: {}", message, e);
-                }
-
-            }
-
-            @Override
-            public void onClose(int code, String reason, boolean remote) {
-                logger.info("WebSocket connection closed ({}, {})", code, reason);
-                BinanceUs.this.webSocketClient.getInitializationLatch().countDown();
-
-            }
-
-            @Override
-            public boolean connectBlocking() {
-                return false;
-            }
-        };
-        return this.webSocketClient;
-
-
-    }
-
 
     @Override
     public String getSymbol() {
@@ -216,269 +160,223 @@ public class BinanceUs extends Exchange {
     }
 
     @Override
-    public void createOrder(@NotNull TradePair tradePair, @NotNull Side side, @NotNull ENUM_ORDER_TYPE orderType, double price, double size, Date timestamp, double stopLoss, double takeProfit) throws IOException, InterruptedException {
-        this.tradePair = tradePair;
+    public void createOrder(@NotNull TradePair tradePair, @NotNull Side side, @NotNull ENUM_ORDER_TYPE orderType, double price, double size, Date timestamp, double stopLoss, double takeProfit) {
 
-        requestBuilder.uri(URI.create(STR."\{url}/api/v3/orders"));
-        requestBuilder.method("POST", HttpRequest.BodyPublishers.ofString(OBJECT_MAPPER.writeValueAsString(new CreateOrderRequest(
-                tradePair.toString('-'),
-                side,
-                orderType,
-                price,
-                size,
-                timestamp,
-                stopLoss,
-                takeProfit
-        ))));
-        HttpResponse<String> response = client.send(requestBuilder.build(), HttpResponse.BodyHandlers.ofString());
-        if (response.statusCode() == 200) {
-            logger.info("Order created: {}", response.body());
-            return;
+        Map<String, String> data = new HashMap<>();
+
+        // Add the necessary parameters for creating an order
+        data.put("symbol", tradePair.toString('-')); // BTC-USD, etc.
+        data.put("side", side.name()); // BUY or SELL
+        data.put("type", orderType.name()); // Order type: LIMIT, MARKET, etc.
+
+        // Add additional parameters based on the type of order
+        if (orderType == ENUM_ORDER_TYPE.LIMIT) {
+            data.put("price", String.valueOf(price));
+            data.put("timeInForce", "GTC"); // Good 'Til Canceled (example)
         }
-        throw new RuntimeException(STR."Failed to create order: \{response.body()}");
+
+        data.put("quantity", String.valueOf(size)); // Size of the trade
+        data.put("timestamp", String.valueOf(timestamp.getTime()));
+
+        // Add optional stop-loss and take-profit, if applicable
+        if (stopLoss > 0) {
+            data.put("stopPrice", String.valueOf(stopLoss));
+        }
+
+        if (takeProfit > 0) {
+            data.put("takeProfitPrice", String.valueOf(takeProfit));
+        }
+
+        // Make the API request
+        String apiPath = "/api/v3/order";
+
+        try {
+            // Use the helper method to make the signed request asynchronously
+            String response = binanceUsRequest(apiPath, data, getApiKey(), getApiSecret());
+
+            // Parse the response and handle it (e.g., log, notify user, etc.)
+            logger.info("Order created successfully: {}", response);
+        } catch (Exception e) {
+            logger.error("Failed to create order: {}", e.getMessage());
+            throw new RuntimeException("Order creation failed: %s".formatted(e.getMessage()), e);
+        }
     }
 
     @Override
-    public CompletableFuture<String> cancelOrder(String orderId) throws IOException, InterruptedException {
-        requestBuilder.uri(URI.create(url + STR."/orders/cancel\{orderId}"));
-        requestBuilder.method("DELETE", HttpRequest.BodyPublishers.noBody());
-        HttpResponse<String> response = client.send(requestBuilder.build(), HttpResponse.BodyHandlers.ofString());
-        if (response.statusCode() == 200) {
-            return CompletableFuture.completedFuture(orderId);
-        }
-        throw new RuntimeException(STR."Failed to cancel order: \{response.body()}");
+    public CompletableFuture<String> cancelOrder(String orderId) {
+
+        Map<String, String> data = new HashMap<>();
+        data.put("orderId", orderId);
+        data.put("timestamp", String.valueOf(System.currentTimeMillis()));
+
+        String apiPath = "/api/v3/order";
+
+        return CompletableFuture.supplyAsync(() -> {
+            try {
+                // Use the helper method to make the signed request for order cancellation
+                String response = binanceUsRequest(apiPath, data, getApiKey(), getApiSecret());
+
+                // Log the cancellation success
+                logger.info("Order canceled successfully: {}", response);
+
+                // Return the response as part of the CompletableFuture
+                return response;
+            } catch (Exception e) {
+                logger.error("Failed to cancel order: {}", e.getMessage());
+
+                // Throw runtime exception wrapped in CompletableFuture
+                throw new RuntimeException("Order cancellation failed: %s".formatted(e.getMessage()), e);
+            }
+        });
     }
+
 
     @Override
     public String getExchangeMessage() {
         return message;
     }
-
-    @Override
-    public CandleDataSupplier getCandleDataSupplier(int secondsPerCandle, TradePair tradePair) {
-        return new CoinbaseCandleDataSupplier(secondsPerCandle, tradePair);
-    }
-
-
-    public @NotNull TradePair getTradePair() {
-        return tradePair;
-    }
-
-    public void setTradePair(@NotNull TradePair tradePair) {
-        this.tradePair = tradePair;
-    }
-
-    /**
-     * Fetches the recent trades for the given trade pair from  {@code stopAt} till now (the current time).
-     * <p>
-     * This method only needs to be implemented to support live syncing.
-     */
     @Override
     public CompletableFuture<List<Trade>> fetchRecentTradesUntil(TradePair tradePair, Instant stopAt) {
-        Objects.requireNonNull(tradePair);
-        Objects.requireNonNull(stopAt);
+        Objects.requireNonNull(tradePair, "TradePair must not be null");
+        Objects.requireNonNull(stopAt, "StopAt time must not be null");
+
+        // Ensure the stopAt time is in the past
         if (stopAt.isAfter(Instant.now())) {
             return CompletableFuture.completedFuture(Collections.emptyList());
         }
 
-        CompletableFuture<List<Trade>> futureResult = new CompletableFuture<>();
-
-        // It is not easy to fetch trades concurrently because we need to get the "cb-after" header after each request.
-        CompletableFuture.runAsync(() -> {
-            IntegerProperty afterCursor = new SimpleIntegerProperty(0);
+        return CompletableFuture.supplyAsync(() -> {
             List<Trade> tradesBeforeStopTime = new ArrayList<>();
 
-            // For Public Endpoints, our rate limit is 3 requests per second, up to 6 requests per second in
-            // burst.
-            // We will know if we get rate limited if we get a 429 response code.
+            String apiPath = "/api/v3/trades";
+            boolean moreTrades = true;
 
-            for (int i = 0; !futureResult.isDone(); i++) {
-                String uriStr = url;
-                uriStr += "/products/%s/trades".formatted(tradePair.toString('-'));
-
-                if (i != 0) {
-                    uriStr += "?after=%d".formatted(afterCursor.get());
-                }
-
+            while (moreTrades) {
                 try {
-                    HttpResponse<String> response = client.send(
-                            requestBuilder
-                                    .uri(URI.create(uriStr))
-                                    .GET().build(),
-                            HttpResponse.BodyHandlers.ofString());
+                    // Construct request for trades
+                    HttpRequest request = HttpRequest.newBuilder()
+                            .uri(URI.create("%s%s?symbol=%s&limit=1000".formatted(API_URL, apiPath, tradePair.toString('-'))))
+                            .GET()
+                            .build();
 
-                    logger.info("response headers: %s".formatted(response.headers()));
+                    // Send the request asynchronously and wait for the response
+                    HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
 
                     if (response.statusCode() != 200) {
-                        logger.error("Failed to fetch trades: %s for trade pair: %s".formatted(response.body(), tradePair));
-
-                        message = response.body();
-                        futureResult.completeExceptionally(new RuntimeException(
-                                "HTTP error response: %d".formatted(response.statusCode())));
-                        return;
+                        throw new RuntimeException("Error fetching trades: %d - %s".formatted(response.statusCode(), response.body()));
                     }
 
-                    message = response.body();
-                    if (response.headers().firstValue("CB-AFTER").isEmpty()) {
-                        futureResult.completeExceptionally(new RuntimeException(
-                                "coinbase trades response did not contain header \"cb-after\": %s".formatted(response)));
-                        return;
+                    ObjectMapper objectMapper = new ObjectMapper();
+                    JsonNode tradesResponse = objectMapper.readTree(response.body());
+
+                    // If the response is empty or invalid
+                    if (!tradesResponse.isArray() || tradesResponse.isEmpty()) {
+                        logger.info("No more trades for symbol: {}. Stop time: {}", tradePair, stopAt);
+                        moreTrades = false;
+                        continue;
                     }
 
-                    afterCursor.setValue(Integer.valueOf((response.headers().firstValue("CB-AFTER").get())));
+                    for (JsonNode tradeNode : tradesResponse) {
+                        Instant tradeTime = Instant.ofEpochMilli(tradeNode.get("time").asLong());
 
-                    JsonNode tradesResponse = OBJECT_MAPPER.readTree(response.body());
-
-                    if (!tradesResponse.isArray()) {
-                        futureResult.completeExceptionally(new RuntimeException(
-                                "coinbase trades response was not an array!"));
-                    }
-                    if (tradesResponse.isEmpty()) {
-                        futureResult.completeExceptionally(new IllegalArgumentException("tradesResponse was empty"));
-                    } else {
-                        for (int j = 0; j < tradesResponse.size(); j++) {
-                            JsonNode trade = tradesResponse.get(j);
-                            Instant time = Instant.from(ISO_INSTANT.parse(trade.get("time").asText()));
-                            if (time.compareTo(stopAt) <= 0) {
-                                futureResult.complete(tradesBeforeStopTime);
-                                break;
-                            } else {
-                                tradesBeforeStopTime.add(new Trade(tradePair,
-                                        DefaultMoney.ofFiat(trade.get("price").asText(), tradePair.getCounterCurrency()),
-                                        DefaultMoney.ofCrypto(trade.get("size").asText(), tradePair.getBaseCurrency()),
-                                        Side.getSide(trade.get("side").asText()), trade.get("trade_id").asLong(), time));
-                            }
+                        // Stop if we've reached the stopAt time
+                        if (tradeTime.isBefore(stopAt)) {
+                            moreTrades = false;
+                            break;
                         }
+
+                        // Create a new Trade object and add it to the list
+                        Trade trade = new Trade(
+                                tradePair,
+                                DefaultMoney.ofFiat(tradeNode.get("price").asText(), tradePair.getCounterCurrency()),
+                                DefaultMoney.ofCrypto(tradeNode.get("qty").asText(), tradePair.getBaseCurrency()),
+                                Side.getSide(tradeNode.get("isBuyerMaker").asBoolean() ? "SELL" : "BUY"),
+                                tradeNode.get("id").asLong(),
+                                tradeTime
+                        );
+                        tradesBeforeStopTime.add(trade);
                     }
-                } catch (IOException | InterruptedException ex) {
-                    logger.error("ex: ", ex);
-                    message = ex.getMessage();
-                    futureResult.completeExceptionally(ex);
-                    return;
+
+                } catch (IOException | InterruptedException e) {
+                    throw new RuntimeException("Failed to fetch trades", e);
                 }
+
+                // Optionally, implement a delay to avoid rate limiting
             }
+
+            return tradesBeforeStopTime;
         });
-
-        return futureResult;
     }
 
-    /**
-     * This method fetches candle data for an in-progress candle to support live syncing.
-     */
+
     @Override
-    public CompletableFuture<Optional<InProgressCandleData>> fetchCandleDataForInProgressCandle(
-            TradePair tradePair, Instant currentCandleStart, long secondsIntoCurrentCandle, int secondsPerCandle) {
-
-        // Format the start date for the request
-        String startDateString = DateTimeFormatter.ISO_LOCAL_DATE_TIME.format(
-                LocalDateTime.ofInstant(currentCandleStart, ZoneOffset.UTC));
-
-        // Determine the ideal granularity and adjust to the closest supported granularity
-        long idealGranularity = Math.max(10, secondsIntoCurrentCandle / 200);
-        int actualGranularity = getCandleDataSupplier(secondsPerCandle, tradePair)
-                .getSupportedGranularity().stream()
-                .min(Comparator.comparingInt(granularity -> (int) Math.abs(granularity - idealGranularity)))
-                .orElseThrow(() -> new NoSuchElementException("No supported granularity found"));
-
-        // Build and send the HTTP request asynchronously
-        String requestUrl = String.format(
-                "%s/products/%s/candles?granularity=%d&start=%s", url
-                , tradePair.toString('-'), actualGranularity, startDateString);
-
-        return client.sendAsync(
-                        requestBuilder.uri(URI.create(requestUrl)).GET().build(),
-                        HttpResponse.BodyHandlers.ofString())
-                .thenApply(HttpResponse::body)
-                .thenApply(this::parseCandleData)
-                .thenApply(optionalData -> optionalData.or(Optional::empty));
-    }
-
-    /**
-     * Parses the response string into an Optional containing InProgressCandleData.
-     *
-     * @param response The JSON response string from the API.
-     * @return An Optional containing InProgressCandleData if data is available, otherwise empty.
-     */
-    private Optional<InProgressCandleData> parseCandleData(String response) {
-        logger.info("Coinbase response: {}", response);
-
-        JsonNode responseNode;
-        try {
-            responseNode = OBJECT_MAPPER.readTree(response);
-        } catch (JsonProcessingException ex) {
-            throw new RuntimeException("Error parsing JSON response", ex);
-        }
-
-        if (responseNode.isEmpty()) {
-            return Optional.empty();
-        }
-
-        double openPrice = -1;
-        double highSoFar = Double.NEGATIVE_INFINITY;
-        double lowSoFar = Double.POSITIVE_INFINITY;
-        double volumeSoFar = 0;
-        double lastTradePrice = -1;
-        int currentTill = -1;
-        boolean foundFirstCandle = false;
-
-        Instant currentCandleStart = Instant.ofEpochSecond(responseNode.get(0).get(0).asInt());
-        for (JsonNode candle : responseNode) {
-            int candleStartTime = candle.get(0).asInt();
-            int secondsPerCandle = (int) (0.000001 * candle.get(6).asDouble()); // Adjust for
-            int candleEndTime = candleStartTime + secondsPerCandle;
-
-            // Skip candles outside the current candle's timeframe
-            if (candleStartTime < currentCandleStart.getEpochSecond() || candleStartTime >= candleEndTime) {
-                continue;
-            }
-
-            if (!foundFirstCandle) {
-                currentTill = candleStartTime;
-                lastTradePrice = candle.get(4).asDouble();
-                foundFirstCandle = true;
-            }
-
-            openPrice = candle.get(3).asDouble();
-            highSoFar = Math.max(highSoFar, candle.get(2).asDouble());
-            lowSoFar = Math.min(lowSoFar, candle.get(1).asDouble());
-            volumeSoFar += candle.get(5).asDouble();
-        }
-
-        int openTimeInSeconds = (int) (currentCandleStart.toEpochMilli() / 1000L);
-
-        return Optional.of(new InProgressCandleData(openTimeInSeconds, openPrice, highSoFar, lowSoFar, currentTill, lastTradePrice, volumeSoFar));
+    public CandleDataSupplier getCandleDataSupplier(int secondsPerCandle, TradePair tradePair) {
+        return new BinanceUsCandleDataSupplier(secondsPerCandle, tradePair);
     }
 
     @Override
     public List<Order> getPendingOrders() throws IOException, InterruptedException {
+        // Construct the request URI for pending orders
+        String requestUrl = String.format("%s/openOrders", API_URL);
 
-        requestBuilder.uri(URI.create("%s/orders".formatted(url)));
-        HttpResponse<String> res = client.send(requestBuilder.GET().build(), HttpResponse.BodyHandlers.ofString());
+        // Make the HTTP GET request
+        requestBuilder
+                .uri(URI.create(requestUrl));
 
-        if (res.statusCode() != 200) {
-            throw new RuntimeException(String.format("Failed to get pending orders: %s", res.body()));
+
+        // Send the request and get the response
+        HttpResponse<String> response = client.send(requestBuilder.build(), HttpResponse.BodyHandlers.ofString());
+
+        // Check if the response is successful
+        if (response.statusCode() != 200) {
+            logger.error("Failed to get pending orders: {}", response.body());
+            throw new RuntimeException("Failed to get pending orders: %s".formatted(response.body()));
         }
 
-        return OBJECT_MAPPER.readValue(res.body(), new TypeReference<>() {
+        // Parse the JSON response to a list of Order objects
+        ObjectMapper objectMapper = new ObjectMapper();
+        objectMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
+        List<Order> orders = objectMapper.readValue(response.body(), new TypeReference<>() {
         });
+
+        // Log and return the list of pending orders
+        logger.info("Pending orders: {}", orders);
+        return orders;
     }
+
 
     @Override
-    public CompletableFuture<String> getOrderBook(@NotNull TradePair tradePair) throws IOException, InterruptedException {
-
-        requestBuilder.uri(URI.create(String.format("%s/products".formatted(url), tradePair.toString('-'))));
-        HttpResponse<String> res = client.send(requestBuilder.GET().build(), HttpResponse.BodyHandlers.ofString());
-
-        if (res.statusCode() != 200) {
-            throw new RuntimeException(String.format("Failed to get order book for %s: %s", tradePair, res.body()));
-        }
-
-        OrderBook orderBook = OBJECT_MAPPER.readValue(res.body(), OrderBook.class);
-        logger.info("coinbase order book: %s".formatted(orderBook));
-        return CompletableFuture.completedFuture(res.body());
+    public CompletableFuture<String> getOrderBook(@NotNull TradePair tradePair) {
 
 
+        String apiPath = "/api/v3/depth";
+        requestBuilder.uri(URI.create(API_URL + apiPath));
+
+
+        return client.sendAsync(requestBuilder.build(), HttpResponse.BodyHandlers.ofString())
+
+                .thenApply(response -> {
+                    if (response.statusCode() != 200) {
+                        logger.error("Failed to get order book for trade pair {}: {}", tradePair, response.body());
+                        throw new RuntimeException("Failed to get order book: %s".formatted(response.body()));
+                    }
+
+                    ObjectMapper objectMapper = new ObjectMapper();
+                    OrderBook orderBook;
+                    try {
+                        orderBook = objectMapper.readValue(response.body(), OrderBook.class);
+
+
+                        // Log and return the order book
+                        logger.info("Order book for {}: {}", tradePair, orderBook);
+
+                        return objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(orderBook);
+                    } catch (JsonProcessingException e) {
+                        throw new RuntimeException(e);
+                    }
+                });
     }
+
 
     @Override
     public JsonParser getUserAccountDetails() {
@@ -486,160 +384,113 @@ public class BinanceUs extends Exchange {
     }
 
     @Override
-    public void connect(String text, String text1, String userIdText) throws IOException, InterruptedException {
-        if (text == null || text1 == null || userIdText == null) {
-            throw new IllegalArgumentException("All parameters must be non-null");
-        }
-        requestBuilder.uri(URI.create(String.format("%s/accounts/%%s".formatted(url))));
-        HttpResponse<String> res = client.send(requestBuilder.GET().build(), HttpResponse.BodyHandlers.ofString());
-
-        if (res.statusCode() != 200) {
-            throw new RuntimeException(String.format("Failed to get user account details for %s: %s", userIdText, res.body()));
-        }
-
-        Account userAccount = OBJECT_MAPPER.readValue(res.body(), Account.class);
-        logger.info("coinbase user account: %s".formatted(userAccount));
-
+    public void connect(String text, String text1, String userIdText) {
 
     }
 
     @Override
-    public void getPositionBook(@NotNull TradePair tradePair) throws IOException, InterruptedException {
-
-        requestBuilder.uri(
-                URI.create(String.format("%s/products/%%s/order_book".formatted(url), tradePair.toString('-')))
-        );
-        HttpResponse<String> res = client.send(requestBuilder.GET().build(), HttpResponse.BodyHandlers.ofString());
-
-        if (res.statusCode() != 200) {
-            throw new RuntimeException(String.format("Failed to get position book for %s: %s", tradePair, res.body()));
-        }
-
-        OrderBook positionBook = OBJECT_MAPPER.readValue(res.body(), OrderBook.class);
-        logger.info("coinbase position book: %s".formatted(positionBook));
+    public void getPositionBook(TradePair tradePair) {
 
     }
 
     @Override
     public List<Order> getOpenOrder(@NotNull TradePair tradePair) throws IOException, InterruptedException {
+        // Construct the request URI for open orders
+        String requestUrl = String.format("%s/orders?symbol=%s", API_URL, tradePair.toString('-'));
 
-        requestBuilder.uri(URI.create(String.format(url+"/orders?product_id=%s", tradePair.toString('-'))));
-        HttpResponse<String> res = client.send(requestBuilder.GET().build(), HttpResponse.BodyHandlers.ofString());
+        // Make the HTTP GET request
+        requestBuilder
+                .uri(URI.create(requestUrl))
+                .GET();
 
-        if (res.statusCode() != 200) {
-            throw new RuntimeException(String.format("Failed to get open orders for %s: %s", tradePair, res.body()));
+        HttpResponse<String> response = client.send(requestBuilder.build(), HttpResponse.BodyHandlers.ofString());
+
+        // Check if the response is successful
+        if (response.statusCode() != 200) {
+            logger.error("Failed to get open orders for trade pair {}: {}", tradePair, response.body());
+            throw new RuntimeException("Failed to get open orders: %s".formatted(response.body()));
         }
 
-        List<Order> orders = OBJECT_MAPPER.readValue(res.body(), new TypeReference<>() {
+        // Parse the JSON response
+        ObjectMapper objectMapper = new ObjectMapper();
+        objectMapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
+        List<Order> orders = objectMapper.readValue(response.body(), new TypeReference<>() {
         });
-        logger.info("coinbase open orders: %s".formatted(orders));
+
+        // Log and return the list of orders
+        logger.info("Open orders for trade pair {}: {}", tradePair, orders);
         return orders;
-
-
     }
+
 
     @Override
-    public ObservableList<Order> getOrders() throws IOException, InterruptedException {
-
-        //Get all orders from Coinbase API
-
-        ObservableList<Order> orders = FXCollections.observableArrayList();
-
-        requestBuilder.uri(URI.create(STR."\{url}/orders"));
-        HttpResponse<String> res = client.send(requestBuilder.GET().build(), HttpResponse.BodyHandlers.ofString());
-
-        if (res.statusCode() != 200) {
-            logger.error("Failed to get all orders: {}", res.body());
-            return orders;
-        }
-
-        List<Order> allOrders = OBJECT_MAPPER.readValue(res.body(), new TypeReference<>() {
-        });
-        logger.info(STR."coinbase all orders: \{allOrders}");
-        orders.addAll(allOrders);
-        return orders;
+    public ObservableList<Order> getOrders() {
+        return null;
     }
-
-    ArrayList<TradePair> tradePairs = new ArrayList<>();
 
     @Override
     public CompletableFuture<ArrayList<TradePair>> getTradePairs() {
 
-        requestBuilder.uri(URI.create("https://api.pro.coinbase.com/products"));
+        requestBuilder.uri(URI.create("%s/api/v3/exchangeInfo".formatted(API_URL)));
+        return client.sendAsync(requestBuilder.build(), HttpResponse.BodyHandlers.ofString())
+                .thenApply(response -> {
 
+                    if (response.statusCode() != 200) {
 
-        try {
+                        Alert alert = new Alert(
+                                Alert.AlertType.ERROR,
 
-            HttpResponse<String> response = client.sendAsync(requestBuilder.GET().build(), HttpResponse.BodyHandlers.ofString()).get();
+                                "Failed to retrieve trade pairs: %s".formatted(response.body())
+                        );
+                        alert.showAndWait();
 
+                        throw new RuntimeException("Failed to get trade pairs: %s".formatted(response.body()));
+                    }
 
-            JsonNode res = OBJECT_MAPPER.readTree(response.body());
-            logger.info("coinbase response: %s".formatted(res));
+                    ArrayList<TradePair> tradePairs = new ArrayList<>();
+                    try {
+                        ObjectMapper objectMapper = new ObjectMapper();
+                        JsonNode jsonNode = objectMapper.readTree(response.body());
+                        JsonNode symbols = jsonNode.get("symbols");
 
-
-            //coinbase response: [{"id":"DOGE-BTC","base_currency":"DOGE","quote_currency":"BTC","quote_increment":"0.00000001","base_increment":"0.1","display_name":"DOGE-BTC","min_market_funds":"0.000016","margin_enabled":false,"post_only":false,"limit_only":false,"cancel_only":false,"status":"online","status_message":"","trading_disabled":false,"fx_stablecoin":false,"max_slippage_percentage":"0.03000000","auction_mode":false,
-            for (JsonNode rate : res) {
-                CryptoCurrency baseCurrency, counterCurrency;
-
-
-                String fullDisplayName = rate.get("base_currency").asText();
-
-
-                String shortDisplayName = rate.get("base_currency").asText();
-                String code = rate.get("base_currency").asText();
-                int fractionalDigits = 8;
-                String symbol = rate.get("base_currency").asText();
-                baseCurrency = new CryptoCurrency(fullDisplayName, shortDisplayName, code, fractionalDigits, symbol, symbol);
-                String fullDisplayName2 = rate.get("quote_currency").asText();
-                String shortDisplayName2 = rate.get("quote_currency").asText();
-                String code2 = rate.get("quote_currency").asText();
-                int fractionalDigits2 = 8;
-                String symbol2 = rate.get("quote_currency").asText();
-
-                counterCurrency = new CryptoCurrency(
-                        fullDisplayName2, shortDisplayName2, code2, fractionalDigits2, symbol2
-                        , symbol);
-
-
-                TradePair tp = new TradePair(
-                        baseCurrency, counterCurrency
-                );
-                tradePairs.add(tp);
-                logger.info("binanceus trade pair: %s".formatted(tp));
-
-
-            }
-
-
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
-        return CompletableFuture.completedFuture(tradePairs);
+                        for (JsonNode symbol : symbols) {
+                            TradePair tradePair = new TradePair(
+                                    symbol.get("baseAsset").asText(),
+                                    symbol.get("quoteAsset").asText()
+                            );
+                            tradePairs.add(tradePair);
+                        }
+                        return tradePairs;
+                    } catch (IOException | SQLException | ClassNotFoundException e) {
+                        throw new RuntimeException(e);
+                    }
+                });
 
     }
 
-    public static class CoinbaseCandleDataSupplier extends CandleDataSupplier {
+
+    public static class BinanceUsCandleDataSupplier extends CandleDataSupplier {
         protected static final ObjectMapper OBJECT_MAPPER = new ObjectMapper()
                 .registerModule(new JavaTimeModule())
                 .enable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS)
                 .configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
-        private static final int EARLIEST_DATA = 1422144000; // roughly the first tra
+        private static final int EARLIEST_DATA = 1422144000; // roughly the first available data in 2015
 
-        CoinbaseCandleDataSupplier(int secondsPerCandle, TradePair tradePair) {
+        BinanceUsCandleDataSupplier(int secondsPerCandle, TradePair tradePair) {
             super(200, secondsPerCandle, tradePair, new SimpleIntegerProperty(-1));
-
         }
 
         @Override
         public Set<Integer> getSupportedGranularity() {
-            // https://docs.pro.coinbase.com/#get-historic-rates
-            return new TreeSet<>(Set.of(60, 300, 900, 3600, 21600, 86400));
 
+            return new TreeSet<>(Set.of(60, 300, 900, 3600,
+
+                    4 * 3600, 24 * 3600, 24 * 3600 * 7, 24 * 3600 * 7 * 4));  // 1m, 5m, 15m, 1h, 4h, 1d
         }
 
         @Override
         public CandleDataSupplier getCandleDataSupplier(int secondsPerCandle, TradePair tradePair) {
-            return new CoinbaseCandleDataSupplier(secondsPerCandle, tradePair);
+            return new BinanceUsCandleDataSupplier(secondsPerCandle, tradePair);
         }
 
         @Override
@@ -656,71 +507,74 @@ public class BinanceUs extends Exchange {
                     .format(LocalDateTime.ofEpochSecond(startTime, 0, ZoneOffset.UTC));
 
             if (startTime == EARLIEST_DATA) {
-                // signal more data is false
+                // signal no more data available
                 return CompletableFuture.completedFuture(Collections.emptyList());
             }
 
 
+            // Build the Binance API request URL
+            String requestUrl = "%s/products/%s/candles?granularity=%d&start=%s&end=%s".formatted(
+                    API_URL,
+                    tradePair.toString('-'),
+                    secondsPerCandle,
+                    startDateString,
+                    endDateString
+            );
+
+            // Asynchronous HTTP request
             return client.sendAsync(
-                            requestBuilder
-                                    .uri(URI.create(
-                                            "%s%s".formatted(url, "/products/%s/candles?granularity=%d&start=%s&end=%s".formatted(tradePair.toString('-'), secondsPerCandle, startDateString, endDateString))))
-                                    .GET().build(),
-                            HttpResponse.BodyHandlers.ofString())
-                    .thenApply(response -> {
+                    requestBuilder.uri(URI.create(requestUrl)).GET().build(),
+                    HttpResponse.BodyHandlers.ofString()
+            ).thenApply(response -> {
+                if (response.statusCode() != 200) {
+                    Alert alert = new Alert(
+                            Alert.AlertType.ERROR,
+                            "Failed to retrieve candle data: %s".formatted(response.body())
+                    );
+                    alert.showAndWait();
+                    return Collections.emptyList();
+                } else {
 
-                        if (response.statusCode() != 200) {
+                    logger.info("Fetched candle data", response);
 
-                            logger.error("Failed to fetch candle data: %s for trade pair: %s".formatted(response.body(), tradePair));
+                    // Parse the JSON response
+                    JsonNode res;
+                    try {
+                        res = OBJECT_MAPPER.readTree(response.body());
+                    } catch (JsonProcessingException ex) {
+                        throw new RuntimeException(ex);
+                    }
 
-
-
-                            Stage stage = new Stage();
-                            Label infos = new Label();
-                            infos.setText("Failed to fetch candle data: %s for trade pair: %s".formatted(response.body(), tradePair));
-                            Scene scene = new Scene(infos);
-                            stage.setScene(scene);
-                            stage.show();
-
-
+                    if (!res.isEmpty()) {
+                        // Remove the current in-progress candle if it exceeds the end time
+                        if (res.get(0).get(0).asInt() + secondsPerCandle > endTime.get()) {
+                            ((ArrayNode) res).remove(0);
                         }
+                        endTime.set(startTime);
 
-
-                        JsonNode res;
-                        try {
-                            res = OBJECT_MAPPER.readTree(response.body());
-                        } catch (JsonProcessingException ex) {
-                            throw new RuntimeException(ex);
+                        // Parse the candle data from the response
+                        List<CandleData> candleData = new ArrayList<>();
+                        for (JsonNode candle : res) {
+                            candleData.add(new CandleData(
+                                    candle.get(3).asDouble(),  // open price
+                                    candle.get(4).asDouble(),  // close price
+                                    candle.get(2).asDouble(),  // high price
+                                    candle.get(1).asDouble(),  // low price
+                                    candle.get(0).asInt(),     // open time
+                                    candle.get(5).asDouble()   // volume
+                            ));
                         }
-
-                        if (!res.isEmpty()) {
-                            // Remove the current in-progress candle
-                            if (res.get(0).get(0).asInt() + secondsPerCandle > endTime.get()) {
-                                ((ArrayNode) res).remove(0);
-                            }
-                            endTime.set(startTime);
-
-                            List<CandleData> candleData = new ArrayList<>();
-                            for (JsonNode candle : res) {
-                                candleData.add(new CandleData(
-                                        candle.get(3).asDouble(),  // open price
-                                        candle.get(4).asDouble(),  // close price
-                                        candle.get(2).asDouble(),  // high price
-                                        candle.get(1).asDouble(),  // low price
-                                        candle.get(0).asInt(),     // open time
-                                        candle.get(5).asDouble()   // volume
-                                ));
-                            }
-                            candleData.sort(Comparator.comparingInt(CandleData::getOpenTime));
-                            return candleData;
-                        } else {
-
-                            logger.info(
-                                    "No candle data found for trade pair: %s from %s to display".formatted(tradePair, startDateString)
-                            );
-                            return Collections.emptyList();
-                        }
-                    });
+                        // Sort candles by open time
+                        candleData.sort(Comparator.comparingInt(CandleData::getOpenTime));
+                        return candleData;
+                    } else {
+                        // No candle data found
+                        logger.info("No candle data found for trade pair: %s from %s".formatted(tradePair, startDateString));
+                        return Collections.emptyList();
+                    }
+                }
+            });
         }
     }
+
 }
